prikaz korisnika svih

--- a/src/main/resources/static/korisnik.html
+++ b/src/main/resources/static/korisnik.html
@@ -1,4 +1,5 @@
 <div ng-controller="korisnikPageController">
     <h1>{{poruka}}</h1>
     <h2>heeeeeeeeeeeeeeeeeeeeeeeeeeeej</h2>
+    <h2>{{username}}</h2>
 </div>
