rutiranje na login,

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,4 +1,8 @@
 <form ng-controller="loginController">
+    <div>
+        <h1>napraviti login ovdje</h1>
+        <a href="/login">login drugi</a>
+    </div>
     <div><label> User Name : <input type="text" ng-model="user.username" name="username"/> </label></div>
     <div><label> Password: <input type="password" ng-model="user.password" name="password"/> </label></div>
     <div><input ng-click="login()"/></div>
