--- a/src/main/resources/static/meni.html
+++ b/src/main/resources/static/meni.html
@@ -27,6 +27,8 @@
                         <!--&lt;!&ndash;<li><a href="#/korisnik">Korisnik</a></li>&ndash;&gt;-->
                         <!--<li><a href="/console">H2 - konzola</a></li>-->
                         <li><a href="#/admin/korisnik">korisnici</a></li>
+                        <li><a href="#/admin/akcija">akcije</a></li>
+                        <li><a href="#/admin/uloga">uloge</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
                         <li role="separator" class="divider"></li>
