--- a/src/main/resources/static/meni.html
+++ b/src/main/resources/static/meni.html
@@ -43,6 +43,9 @@
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
+                <li><h2 translate="GREETING">poz</h2></li>
+                <li ng-click="changeLanguage('bs-Latn-BA')"><button>bs-Latn-BA</button></li>
+                <li ng-click="changeLanguage('en-US')"><button>en-US</button></li>
                 <li ng-show="logovan"><a href="#/korisnik">{{korisnik.username}}</a></li>
                 <li><a href="/login">Sign In</a></li>
                 <li ng-click="logout()"><a href="#">Logout</a></li>
