--- a/src/main/resources/static/registracija.html
+++ b/src/main/resources/static/registracija.html
@@ -1,20 +1,122 @@
-<div ng-controller="registracijaController">
-    <h2>Registracija korisnika</h2>
-    <!-- Call a method in the scope of your controller to handle data submit -->
-    <form ng-submit="submit()" method="post">
-        <div><label> User Name : <input type="text" name="username" ng-model="user.username"/> </label></div>
-        <div><label> Password: <input type="password" name="password" ng-model="user.password"/> </label></div>
-        <div><label> Ponovo Password: <input type="password" name="matchingPassword" ng-model="user.matchingPassword"/> </label></div>
-        <div><label> Ime: <input type="text" name="ime" ng-model="user.ime"/> </label></div>
-        <div><label> Prezime: <input type="text" name="prezime" ng-model="user.prezime"/> </label></div>
-        <div><label> email: <input type="email" name="email" ng-model="user.email"/> </label></div>
-        <div    vc-recaptcha
-                theme="'light'"
-                key="model.key"
-                on-create="setWidgetId(widgetId)"
-                on-success="setResponse(response)"
-                on-expire="cbExpiration()"
-        ></div>
-        <button class="btn" type="submit">Submit</button>
-    </form>
-</div>
+<div md-content layout-gt-sm="row" layout-padding layout="row" flex
+     ng-controller="registracijaController">
+    <md-card>
+        <md-toolbar class="md-table-toolbar md-default">
+            <div class="md-toolbar-tools">
+                <h2 translate="REGISTRATION">Registracija</h2>
+                <span flex=""></span>
+                <!--<md-button class="md-icon-button">-->
+                    <!--<ng-md-icon icon="add" ng-click="newDialog($event)"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<md-button class="md-icon-button">-->
+                    <!--<ng-md-icon icon="cached" ng-click="loadStuffUloga()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+                <!--<md-button class="md-icon-button"-->
+                           <!--ng-show="options.rowSelection && selected.length">-->
+                    <!--<md-tooltip>Delete</md-tooltip>-->
+                    <!--<ng-md-icon icon="delete"-->
+                                <!--ng-click="delete()"-->
+                                <!--style="fill: black"></ng-md-icon>-->
+                <!--</md-button>-->
+            </div>
+        </md-toolbar>
+        <!--<md-card-header>-->
+            <!--&lt;!&ndash;<h2></h2>&ndash;&gt;-->
+            <!--<md-card-avatar>-->
+                <!--&lt;!&ndash;<ng-md-icon icon="edit" style="fill:black"/>&ndash;&gt;-->
+            <!--</md-card-avatar>-->
+            <!--<md-card-header-text>-->
+                <!--<span class="md-title">Registracija korisnika</span>-->
+            <!--</md-card-header-text>-->
+        <!--</md-card-header>-->
+        <!-- Call a method in the scope of your controller to handle data submit -->
+
+            <form ng-submit="submit()" method="post" name="registracijaForm">
+                <md-content>
+                    <div layout-gt-xs="row">
+                <md-input-container class="md-block">
+                    <label translate="USERNAME"> User Name :  </label>
+                    <input type="text" name="username"
+                           required
+                           ng-model="user.username"/>
+                    <div ng-messages="form.username.$error">
+                        <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                    </div>
+                </md-input-container>
+                        <md-input-container class="md-block">
+                            <label TRANSLATE="EMAIL"> email: </label>
+                            <input type="email" name="email"
+                                   required
+                                   ng-model="user.email"/>
+                            <div ng-messages="form.email.$error">
+                                <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                            </div>
+                        </md-input-container>
+                    </div>
+                <!--<div layout-gt-xs="row">-->
+                    <md-input-container class="md-block">
+                        <label TRANSLATE="PASSWORD"> Password: </label>
+                        <input type="password" name="password"
+                               required
+                               ng-model="user.password"/>
+                        <div ng-messages="form.password.$error">
+                            <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                        </div>
+                    </md-input-container>
+                    <md-input-container class="md-block">
+                        <label TRANSLATE="REPEAT_PASSWORD">Ponovo Password:  </label>
+                        <input type="password" name="matchingPassword"
+                               required
+                               ng-model="user.matchingPassword"/>
+                        <div ng-messages="form.matchingPassword.$error">
+                            <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                        </div>
+                    </md-input-container>
+                <!--</div>-->
+                <div layout-gt-xs="row">
+                    <md-input-container class="md-block">
+                        <label TRANSLATE="FIRST_NAME"> Ime: </label>
+                        <input type="text" name="ime"
+                               required
+                               ng-model="user.ime"/>
+                        <div ng-messages="form.ime.$error">
+                            <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                        </div>
+                    </md-input-container>
+                    <md-input-container class="md-block">
+                        <label TRANSLATE="LAST_NAME"> Prezime: </label>
+                        <input type="text" name="prezime"
+                               required
+                               ng-model="user.prezime"/>
+                        <div ng-messages="form.prezime.$error">
+                            <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                        </div>
+                    </md-input-container>
+                </div>
+
+                <md-input-container>
+                    <div    vc-recaptcha
+                            theme="'light'"
+                            key="model.key"
+                            on-create="setWidgetId(widgetId)"
+                            on-success="setResponse(response)"
+                            on-expire="cbExpiration()"
+                            ng-required="response!=null"
+                    ></div>
+                </md-input-container>
+                </md-content>
+                <!--<button class="btn" type="submit">Submit</button>-->
+            </form>
+
+        <div class="md-actions" layout="row">
+            <span flex></span>
+            <!--<md-button ng-click="answer(null)"> Cancel </md-button>-->
+            <md-button ng-click="submit()"
+                       ng-show="registracijaForm.$valid == registracijaForm.$valid"
+                       ng-disabled="!registracijaForm.$valid"
+                       class="md-primary">Submit</md-button>
+        </div>
+    </md-card>
+</div md-content>
