poruke + token za registraciju preko angulara

--- a/src/main/resources/static/loginA.html
+++ b/src/main/resources/static/loginA.html
@@ -177,7 +177,7 @@
                     </md-input-container>
                 </div>
 
-                <md-input-container>
+                <md-input-container layout-wrap="">
                     <div    vc-recaptcha
                             theme="'light'"
                             key="model.key"
