--- a/src/main/resources/static/loginA.html
+++ b/src/main/resources/static/loginA.html
@@ -1,4 +1,6 @@
-<div md-content layout-gt-sm="row"  layout="row" flex
+<div md-content layout-gt-sm="row"  layout="row" layout-align="center center"
+
+     flex
      ng-controller="loginController">
     <!--<div>-->
         <!--<h1>napraviti login ovdje</h1>-->
