Status, Vrsta dokumenta i Notifikacija

--- a/src/main/resources/static/meni.html
+++ b/src/main/resources/static/meni.html
@@ -29,6 +29,9 @@
                         <li><a href="#/admin/korisnik">korisnici</a></li>
                         <li><a href="#/admin/akcija">akcije</a></li>
                         <li><a href="#/admin/uloga">uloge</a></li>
+                        <li><a href="#/admin/status">Statusi</a></li>
+                        <li><a href="#/admin/vrstaDokumenta">Vrste dokumenata</a></li>
+                        <li><a href="#/admin/notifikacija">Notifikacije</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
                         <li role="separator" class="divider"></li>
