novi korisnik postavke

--- a/src/main/resources/static/js/app/parts/novaUloga.html
+++ b/src/main/resources/static/js/app/parts/novaUloga.html
@@ -1,15 +1,15 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
-<md-dialog aria-label="Mango (Fruit)" ng-controller="novaUlogaCtrl">
-    <!--<md-toolbar>-->
-        <!--<div class="md-table-toolbar">-->
-            <!--<h2 flex>Nova uloga</h2>-->
+<md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
+    <md-toolbar layout-padding>
+        Nova uloga
+            <!--<h4>Nova uloga</h4>-->
+        <!--<span flex></span>-->
             <!--<md-button class="md-icon-button" ng-click="cancel()">-->
                 <!--<md-icon icon="close"-->
                          <!--style="fill: black"-->
                          <!--aria-label="Close dialog"></md-icon>-->
             <!--</md-button>-->
-        <!--</div>-->
-    <!--</md-toolbar>-->
+    </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
             <md-input-container class="md-block">
