--- a/src/main/resources/static/js/app/loginA.html
+++ b/src/main/resources/static/js/app/loginA.html
@@ -1,4 +1,4 @@
-<div md-content layout-gt-sm="row"  layout="row" layout-align="center center"
+<div layout-gt-sm="row"  layout="row" layout-align="center center"
 
      flex
      ng-controller="loginController">
