--- a/src/main/resources/static/js/app/parts/noviKorisnik.html
+++ b/src/main/resources/static/js/app/parts/noviKorisnik.html
@@ -33,6 +33,38 @@
                     </div>
                 </md-input-container>
             </div>
+            <div layout-gt-xs="row">
+                <md-input-container class="md-block">
+                    <label TRANSLATE="FIRST_NAME"> Ime: </label>
+                    <input type="text" name="ime"
+                           required
+                           ng-model="item.ime"/>
+                    <div ng-messages="form.ime.$error">
+                        <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label TRANSLATE="LAST_NAME"> Prezime: </label>
+                    <input type="text" name="prezime"
+                           required
+                           ng-model="item.prezime"/>
+                    <div ng-messages="form.prezime.$error">
+                        <div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>
+                    </div>
+                </md-input-container>
+            </div>
+            <md-datepicker ng-model="item.datumRodjenja" md-placeholder="Enter date"></md-datepicker>
+            <md-input-container class="md-block">
+                <label TRANSLATE="JMBG"> JMBG: </label>
+                <input type="text" name="jmbg"
+                       ng-model="item.jmbg"/>
+                <!--<div ng-messages="form.jmbg.$error">-->
+                    <!--<div ng-message="required" TRANSLATE="VALIDATION_ERROR.REQUIRED">This is required.</div>-->
+                <!--</div>-->
+            </md-input-container>
+            <md-checkbox ng-model="item.enabled" aria-label="enabled">
+                Enabled
+            </md-checkbox>
         </form>
     </md-content>
     <div class="md-actions" layout="row">
