--- a/src/main/resources/static/js/app/korisnik.html
+++ b/src/main/resources/static/js/app/korisnik.html
@@ -1,9 +1,9 @@
-<div ng-controller="korisnikPageController">
-    <h1>{{poruka}}</h1>
-    <h2>heeeeeeeeeeeeeeeeeeeeeeeeeeeej</h2>
-    <h2>{{username}}</h2>
+<!--<div ng-controller="korisnikPageController">-->
+    <!--<h1>{{poruka}}</h1>-->
+    <!--<h2>heeeeeeeeeeeeeeeeeeeeeeeeeeeej</h2>-->
+    <!--<h2>{{username}}</h2>-->
 
-</div>
+<!--</div>-->
 <md-content layout="column" flex
             ng-controller="korisnikPageController">
     <h1>{{poruka}}</h1>
