--- a/src/main/resources/static/js/app/parts/noviKorisnik.html
+++ b/src/main/resources/static/js/app/parts/noviKorisnik.html
@@ -53,7 +53,10 @@
                     </div>
                 </md-input-container>
             </div>
-            <md-datepicker ng-model="item.datumRodjenja" md-placeholder="Enter date"></md-datepicker>
+            <!--<md-input-container>-->
+                <!--<label>Datum rodjenja</label>-->
+                <md-datepicker ng-model="item.datumRodjenja" md-placeholder="Enter date"></md-datepicker>
+            <!--</md-input-container>-->
             <md-input-container class="md-block">
                 <label TRANSLATE="JMBG"> JMBG: </label>
                 <input type="text" name="jmbg"
