--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -84,6 +84,14 @@
     <script src="js/scripts/angular-material-icons.min.js"></script>
     <script src="js/scripts/angular-local-storage.js"></script>
 
+    <script src="js/scripts/popover/nsPopover.js"></script>
+    <link rel="stylesheet" href="js/scripts/popover/nsPopover.css">
+    <!--<script src="js/scripts/angular-strap-master/dist/angular-strap.js"></script>-->
+    <!--<script src="js/scripts/angular-strap-master/dist/angular-strap.tpl.js"></script>-->
+    <!--<script src="js/scripts/angular-strap-master/dist/modules/dimensions.js"></script>-->
+    <!--<script src="js/scripts/angular-strap-master/dist/modules/tooltip.js"></script>-->
+    <!--<script src="js/scripts/angular-strap-master/dist/modules/popover.js"></script>-->
+
     <!--nase-->
     <script src="/js/app.js" type="text/javascript"></script>
     <script src="/js/app/homeController.js" type="text/javascript"></script>
@@ -95,25 +103,65 @@
     <script src="/js/app/admin/administracijaNotifikacijaController.js" type="text/javascript"></script>
     <base href="/" />
 
+    <script type="text/ng-template" id="menu">
+        <div class="triangle"></div>
+        <div class="ns-popover-tooltip">
+            <ul>
+                <li ng-repeat="item in items"><a>{{item.name}}</a></li>
+            </ul>
+        </div>
+    </script>
+
+    <script type="text/ng-template" id="close">
+        <div class="triangle"></div>
+        <div class="ns-popover-tooltip">
+            <ul>
+                <li ng-repeat="item in items"><input type="checkbox">{{item.name}}</li>
+            </ul>
+            <button ng-click="hidePopover()">Close</button>
+        </div>
+    </script>
+
+    <script type="text/ng-template" id="tooltip">
+        <div class="triangle"></div>
+        <div class="ns-popover-tooltip">
+            Cool! The <b>nsPopover</b> could be used as a tooptip.
+        </div>
+    </script>
 </head>
 <body ng-cloak class="ng-cloak"
       layout="column"
       ng-controller="indexController">
-<md-toolbar ng-show="authenticated" >
+
+<md-toolbar ng-show="authenticated" ng-controller="mainToolbarCtrl">
     <div class="md-toolbar-tools">
-        <md-button class="md-icon-button">
+        <md-button class="md-icon-button" ns-popover
+                   ns-popover-template="popover"
+                   ns-popover-trigger="click"
+                   ns-popover-placement="bottom">
             <ng-md-icon icon="menu" ng-click="toggleNavBar()"
                         style="fill: black">
             </ng-md-icon>
         </md-button>
-
+        <span flex></span>
+        {{localUser.name}}
+        <md-button class="md-icon-button">
+            <ng-md-icon icon="person"
+                        style="fill: black">
+            </ng-md-icon>
+        </md-button>
     </div>
 </md-toolbar>
 <div nwt-meni ng-show="authenticated"></div>
+<div layout="column" layout-align="center center" flex ng-show="isLoading">
+    <!---->
+    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+</div>
 <section layout="row" flex>
     <md-sidenav class="md-sidenav-left md-whiteframe-z2"
                 ng-show="authenticated"
-                md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+                md-component-id="left">
+        <!--md-is-locked-open="$mdMedia('gt-md')"-->
         <!--<div>Side nav</div>-->
         <md-toolbar>
             <h1 class="md-toolbar-tools">Sidenav</h1>
@@ -123,9 +171,11 @@
         </md-content>
     </md-sidenav>
     <md-content>
-        <span ng-view=""></span>
+
+        <span ng-hide="isLoading" ng-view=""></span>
     </md-content>
 </section>
+
 <section ng-hide="authenticated">
     <footer layout="row" layout-align="center center">
         <md-input-container>
