--- a/src/main/resources/static/js/app/home.html
+++ b/src/main/resources/static/js/app/home.html
@@ -1,68 +1,109 @@
-<div ng-controller="SubheaderAppCtrl" layout="column" flex layout-fill ng-cloak>
-    <md-toolbar md-scroll-shrink>
-        <div class="md-toolbar-tools">My Messages</div>
-    </md-toolbar>
-    <md-content style="height: 600px;" md-theme="altTheme">
-        <section>
-            <md-subheader class="md-primary">Unread Messages</md-subheader>
-            <md-list layout-padding>
-                <md-list-item class="md-3-line" ng-repeat="message in messages">
-                    <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
-                    <div class="md-list-item-text">
-                        <h3>{{message.what}}</h3>
-                        <h4>{{message.who}}</h4>
-                        <p>
-                            {{message.notes}}
-                        </p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </section>
-        <section>
-            <md-subheader class="md-warn">Late Messages</md-subheader>
-            <md-list layout="column" layout-padding>
-                <md-list-item class="md-3-line" ng-repeat="message in messages">
-                    <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
-                    <div class="md-list-item-text">
-                        <h3>{{message.what}}</h3>
-                        <h4>{{message.who}}</h4>
-                        <p>
-                            {{message.notes}}
-                        </p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </section>
-        <section>
-            <md-subheader>Read Messages</md-subheader>
-            <md-list layout="column" layout-padding>
-                <md-list-item class="md-3-line" ng-repeat="message in messages">
-                    <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
-                    <div class="md-list-item-text">
-                        <h3>{{message.what}}</h3>
-                        <h4>{{message.who}}</h4>
-                        <p>
-                            {{message.notes}}
-                        </p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </section>
-        <section>
-            <md-subheader class="md-accent">Archived messages</md-subheader>
-            <md-list layout="column" layout-padding>
-                <md-list-item class="md-3-line" ng-repeat="message in messages">
-                    <img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">
-                    <div class="md-list-item-text">
-                        <h3>{{message.what}}</h3>
-                        <h4>{{message.who}}</h4>
-                        <p>
-                            {{message.notes}}
-                        </p>
-                    </div>
-                </md-list-item>
-            </md-list>
-        </section>
-    </md-content>
+<div ng-controller="homeController">
+    <md-list layout-padding>
+        <md-list-item ng-repeat="doc in docs">
+            <md-card layout="row" layout-fill>
+                <!--<md-card-header>-->
+                <div layout="column" layout-align="center center">
+                    <md-card-avatar >
+                        <ng-md-icon icon="insert_drive_file" style="fill:black"/>
+                    </md-card-avatar>
+                </div>
+                <!--</md-card-header>-->
+                <div layout="column" layout-padding>
+                    text: {{doc.tekst}}
+                    azuriran: {{doc.azuriran}}
+                    istice: {{doc.istice}}
+                    kreiran: {{doc.kreiran}}
+                </div>
+                <span flex></span>
+                <div layout="column" layout-align="end end">
+                    <md-menu >
+                        <!--md-offset="0 -7"-->
+                        <md-button class="md-icon-button" ng-click="$mdOpenMenu($event)">
+                            <ng-md-icon icon="more_vert" style="fill: black"></ng-md-icon>
+                        </md-button>
+                        <!--<md-button aria-label="Open demo menu" class="md-icon-button" >-->
+                            <!--<md-icon md-menu-origin md-svg-icon="call:email"></md-icon>-->
+                        <!--</md-button>-->
+                        <md-menu-content width="4">
+                            <md-menu-item ng-repeat="item in [1, 2, 3]">
+                                <md-button ng-click="dummyDoc(doc,item)"> <span md-menu-align-target>Option</span> {{item}} </md-button>
+                            </md-menu-item>
+                        </md-menu-content>
+                    </md-menu>
+
+                </div>
+
+
+            </md-card>
+        </md-list-item>
+    </md-list>
 </div>
+<!--<div ng-controller="SubheaderAppCtrl" layout="column" flex  ng-cloak>-->
+    <!--<md-toolbar md-scroll-shrink>-->
+        <!--<div class="md-toolbar-tools">My Messages</div>-->
+    <!--</md-toolbar>-->
+    <!--<md-content style="height: 600px;" md-theme="altTheme">-->
+        <!--<section>-->
+            <!--<md-subheader class="md-primary">Unread Messages</md-subheader>-->
+            <!--<md-list layout-padding>-->
+                <!--<md-list-item class="md-3-line" ng-repeat="message in messages">-->
+                    <!--<img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">-->
+                    <!--<div class="md-list-item-text">-->
+                        <!--<h3>{{message.what}}</h3>-->
+                        <!--<h4>{{message.who}}</h4>-->
+                        <!--<p>-->
+                            <!--{{message.notes}}-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</md-list-item>-->
+            <!--</md-list>-->
+        <!--</section>-->
+        <!--<section>-->
+            <!--<md-subheader class="md-warn">Late Messages</md-subheader>-->
+            <!--<md-list layout="column" layout-padding>-->
+                <!--<md-list-item class="md-3-line" ng-repeat="message in messages">-->
+                    <!--<img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">-->
+                    <!--<div class="md-list-item-text">-->
+                        <!--<h3>{{message.what}}</h3>-->
+                        <!--<h4>{{message.who}}</h4>-->
+                        <!--<p>-->
+                            <!--{{message.notes}}-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</md-list-item>-->
+            <!--</md-list>-->
+        <!--</section>-->
+        <!--<section>-->
+            <!--<md-subheader>Read Messages</md-subheader>-->
+            <!--<md-list layout="column" layout-padding>-->
+                <!--<md-list-item class="md-3-line" ng-repeat="message in messages">-->
+                    <!--<img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">-->
+                    <!--<div class="md-list-item-text">-->
+                        <!--<h3>{{message.what}}</h3>-->
+                        <!--<h4>{{message.who}}</h4>-->
+                        <!--<p>-->
+                            <!--{{message.notes}}-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</md-list-item>-->
+            <!--</md-list>-->
+        <!--</section>-->
+        <!--<section>-->
+            <!--<md-subheader class="md-accent">Archived messages</md-subheader>-->
+            <!--<md-list layout="column" layout-padding>-->
+                <!--<md-list-item class="md-3-line" ng-repeat="message in messages">-->
+                    <!--<img ng-src="{{message.face}}" class="md-avatar" alt="{{message.who}}">-->
+                    <!--<div class="md-list-item-text">-->
+                        <!--<h3>{{message.what}}</h3>-->
+                        <!--<h4>{{message.who}}</h4>-->
+                        <!--<p>-->
+                            <!--{{message.notes}}-->
+                        <!--</p>-->
+                    <!--</div>-->
+                <!--</md-list-item>-->
+            <!--</md-list>-->
+        <!--</section>-->
+    <!--</md-content>-->
+<!--</div>-->
 
