--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -164,7 +164,7 @@
 
                 </md-button>
                                 </span>
-                <span ng-click="logout()">logout__  </span>
+                <span ng-click="logout()">logout&nbsp;&nbsp;</span>
                 <md-input-container>
                     <md-select ng-model="jezik">
                         <md-option ng-repeat="j in jezici" value="{{j}}">{{j}}</md-option>
