--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -104,6 +104,7 @@
     <script src="/js/app/admin/administracijaVrstaDokumentaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaNotifikacijaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaKomentaraController.js" type="text/javascript"></script>
+    <script src="/js/app/admin/administracijaDokumentaController.js" type="text/javascript"></script>
     <base href="/" />
     <script type="text/ng-template" id="myPopoverTemplate.html">
         <span style="color: rebeccapurple">
