--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -103,6 +103,7 @@
     <script src="/js/app/admin/administracijaStatusaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaVrstaDokumentaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaNotifikacijaController.js" type="text/javascript"></script>
+    <script src="/js/app/admin/administracijaDogadjajaController.js" type="text/javascript"></script>
     <base href="/" />
     <script type="text/ng-template" id="myPopoverTemplate.html">
         <span style="color: rebeccapurple">
