Direktiva ng-enter za slanje formi bez miša

--- a/src/main/resources/static/js/app/loginA.html
+++ b/src/main/resources/static/js/app/loginA.html
@@ -17,7 +17,7 @@
                     <span flex=""></span>
                 </div>
             </md-toolbar>
-            <form role="form" ng-submit="login()" name="loginForm">
+            <form role="form" ng-submit="login()" ng-enter="login()" name="loginForm">
                 <md-input-container class="md-block">
                     <label translate="USERNAME"> User Name :  </label>
                     <input type="text" name="username"
