sredjen edit; ispravke

--- a/src/main/resources/static/js/app/parts/editStatus.html
+++ b/src/main/resources/static/js/app/parts/editStatus.html
@@ -6,6 +6,10 @@
     <md-content class="md-padding">
         <form name="form">
 
+            <!-- <div layout-gt-xs="row">
+                <p>Number {{nazivba}}</p>
+            </div>-->
+
             <div layout-gt-xs="row">
                 <md-input-container class="md-block">
                     <label TRANSLATE="Title_BA"> Naziv BA: </label>
