--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -96,6 +96,10 @@
 
     <!--nase-->
     <script src="/js/app.js" type="text/javascript"></script>
+    <script src="js/app/utils/direktive.js" type="text/javascript"></script>
+    <script src="js/app/utils/factories.js" type="text/javascript"></script>
+    <script src="js/app/utils/services.js" type="text/javascript"></script>
+
     <script src="/js/app/homeController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaKorisnikaController.js" type="text/javascript"></script>
@@ -232,19 +236,19 @@
     <!--</footer>-->
 
 
-<div class="navbar-fixed-bottom" ng-controller="uploadtestController">
-    <h2>test upload</h2>
-    <!--<form method="POST" enctype="multipart/form-data" action="/upload">
-        <table>
-            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-            <tr><td>Name:</td><td><input type="text" name="name" /></td></tr>
-            <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
-        </table>
-    </form>-->
-    <input type="file" value="Nova verzija" file-model="file" class="btn btn-default btn-block" />
-    <input type="button" value="Upload" ng-click="newVersion()" />
-    <footer>footer 2015/2016</footer>
-</div>
+<!--<div class="navbar-fixed-bottom" ng-controller="uploadtestController">-->
+    <!--<h2>test upload</h2>-->
+    <!--&lt;!&ndash;<form method="POST" enctype="multipart/form-data" action="/upload">-->
+        <!--<table>-->
+            <!--<tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>-->
+            <!--<tr><td>Name:</td><td><input type="text" name="name" /></td></tr>-->
+            <!--<tr><td></td><td><input type="submit" value="Upload" /></td></tr>-->
+        <!--</table>-->
+    <!--</form>&ndash;&gt;-->
+    <!--<input type="file" value="Nova verzija" file-model="file" class="btn btn-default btn-block" />-->
+    <!--<input type="button" value="Upload" ng-click="newVersion()" />-->
+    <!--<footer>footer 2015/2016</footer>-->
+<!--</div>-->
 
 <!--<form method="POST" enctype="multipart/form-data" action="/upload">
     <table>
