--- a/src/main/resources/static/js/app/parts/editDokument.html
+++ b/src/main/resources/static/js/app/parts/editDokument.html
@@ -5,15 +5,15 @@
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
-            <div layout-gt-xs="row">
-                <md-datepicker ng-model="item.azuriran" md-placeholder="Enter date"></md-datepicker>
-            </div>
+            <!--<div layout-gt-xs="row">-->
+                <!--<md-datepicker ng-model="item.azuriran" md-placeholder="Enter date"></md-datepicker>-->
+            <!--</div>-->
             <div layout-gt-xs="row">
                 <md-datepicker ng-model="item.istice" md-placeholder="Enter date"></md-datepicker>
             </div>
-            <div layout-gt-xs="row">
-                <md-datepicker ng-model="item.kreiran" md-placeholder="Enter date"></md-datepicker>
-            </div>
+            <!--<div layout-gt-xs="row">-->
+                <!--<md-datepicker ng-model="item.kreiran" md-placeholder="Enter date"></md-datepicker>-->
+            <!--</div>-->
             <div layout-gt-xs="row">
                 <!--  <md-input-container class="md-block">
                       <label TRANSLATE="Created"> Kreiran: </label>
@@ -26,7 +26,7 @@
                   </md-input-container> -->
 
                 <md-input-container class="md-block">
-                    <label TRANSLATE="Name"> Oznaka: </label>
+                    <label TRANSLATE="DOCUMENT.NAME"> Oznaka: </label>
                     <input type="text" name="oznaka"
                            required
                            ng-model="item.oznaka"/>
@@ -36,7 +36,7 @@
                 </md-input-container>
 
                 <md-input-container class="md-block">
-                    <label TRANSLATE="Signature"> Potpis: </label>
+                    <label TRANSLATE="DOCUMENT.SIGNATURE"> Potpis: </label>
                     <input type="text" name="potpis"
                            required
                            ng-model="item.potpis"/>
@@ -46,12 +46,12 @@
                 </md-input-container>
             </div>
 
-            <div layout-gt-xs="row">
-                <md-datepicker ng-model="item.potpisan" md-placeholder="Enter date"></md-datepicker>
-            </div>
+            <!--<div layout-gt-xs="row">-->
+                <!--<md-datepicker ng-model="item.potpisan" md-placeholder="Enter date"></md-datepicker>-->
+            <!--</div>-->
 
             <md-input-container class="md-block">
-                <label TRANSLATE="Text"> Tekst: </label>
+                <label TRANSLATE="DOCUMENT.TEXT"> Tekst: </label>
                 <input type="text" name="tekst"
                        required
                        ng-model="item.tekst"/>
