--- a/src/main/resources/static/js/app/parts/editDokument.html
+++ b/src/main/resources/static/js/app/parts/editDokument.html
@@ -1,7 +1,8 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        Uredi dokument
+
+        <span translate="DOCUMENT.EDIT">Uredi dokument</span>
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
