--- a/src/main/resources/static/js/app/parts/noviDokument.html
+++ b/src/main/resources/static/js/app/parts/noviDokument.html
@@ -1,7 +1,7 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        Novi dokument
+        <span translate="DOCUMENT.NEW">Novi dokument</span>
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
