--- a/src/main/resources/static/js/app/parts/noviKorisnik.html
+++ b/src/main/resources/static/js/app/parts/noviKorisnik.html
@@ -1,7 +1,7 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        Novi korisnik
+        <span translate="USER.NEW">Novi korisnik</span>
         <!--<h4>Nova uloga</h4>-->
         <!--<span flex></span>-->
         <!--<md-button class="md-icon-button" ng-click="cancel()">-->
