--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -170,6 +170,7 @@
                 </md-button>
                                 </span>
                 <span ng-click="logout()">logout&nbsp;&nbsp;</span>
+                <prevod-odabir></prevod-odabir>
                 <!--<md-input-container>-->
                     <!--<md-select ng-model="jezik">-->
                         <!--<md-option ng-repeat="j in jezici" value="{{j}}">{{j}}</md-option>-->
@@ -191,13 +192,9 @@
 
 </section>
 
-<section>
+<section ng-hide="authenticated">
     <footer layout="row" layout-align="center center">
-        <md-input-container>
-            <md-select ng-model="jezik">
-                <md-option ng-repeat="j in jezici" value="{{j}}">{{j}}</md-option>
-            </md-select>
-        </md-input-container>
+        <prevod-odabir></prevod-odabir>
     </footer>
 </section>
 <!--<div ng-controller="homeController">-->
@@ -232,19 +229,19 @@
     <!--</footer>-->
 
 
-<div class="navbar-fixed-bottom" ng-controller="uploadtestController">
-    <h2>test upload</h2>
-    <!--<form method="POST" enctype="multipart/form-data" action="/upload">
-        <table>
-            <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-            <tr><td>Name:</td><td><input type="text" name="name" /></td></tr>
-            <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
-        </table>
-    </form>-->
-    <input type="file" value="Nova verzija" file-model="file" class="btn btn-default btn-block" />
-    <input type="button" value="Upload" ng-click="newVersion()" />
-    <footer>footer 2015/2016</footer>
-</div>
+<!--<div class="navbar-fixed-bottom" ng-controller="uploadtestController">-->
+    <!--<h2>test upload</h2>-->
+    <!--&lt;!&ndash;<form method="POST" enctype="multipart/form-data" action="/upload">-->
+        <!--<table>-->
+            <!--<tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>-->
+            <!--<tr><td>Name:</td><td><input type="text" name="name" /></td></tr>-->
+            <!--<tr><td></td><td><input type="submit" value="Upload" /></td></tr>-->
+        <!--</table>-->
+    <!--</form>&ndash;&gt;-->
+    <!--<input type="file" value="Nova verzija" file-model="file" class="btn btn-default btn-block" />-->
+    <!--<input type="button" value="Upload" ng-click="newVersion()" />-->
+    <!--<footer>footer 2015/2016</footer>-->
+<!--</div>-->
 
 <!--<form method="POST" enctype="multipart/form-data" action="/upload">
     <table>
