--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -100,7 +100,7 @@
     <script src="js/app/utils/factories.js" type="text/javascript"></script>
     <script src="js/app/utils/services.js" type="text/javascript"></script>
 
-    <script src="/js/app/homeController.js" type="text/javascript"></script>
+    <script src="/js/app/home/homeController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaKorisnikaController.js" type="text/javascript"></script>
     <script src="/js/app/admin/administracijaDashboardController.js" type="text/javascript"></script>
