prevod za Status, Vrsta dokumenta, Notifikacija i Dogadjaj

--- a/src/main/resources/static/js/app/parts/editDogadjaj.html
+++ b/src/main/resources/static/js/app/parts/editDogadjaj.html
@@ -1,14 +1,14 @@
 <!--https://klarsys.github.io/angular-material-icons/-->
 <md-dialog aria-label="Mango (Fruit)" ng-controller="noviItemModalCtrl">
     <md-toolbar layout-padding>
-        Novi dogadjaj
+        <span translate="EVENT.EDIT">Uredi događaj</span>
     </md-toolbar>
     <md-content class="md-padding">
         <form name="form">
 
             <div layout-gt-xs="row">
                 <md-input-container class="md-block">
-                    <label TRANSLATE="Title"> Naziv: </label>
+                    <label TRANSLATE="EVENT.TITLE"> Naziv: </label>
                     <input type="text" name="naziv"
                            required
                            ng-model="item.naziv"/>
@@ -21,7 +21,7 @@
     </md-content>
     <div class="md-actions" layout="row">
         <span flex></span>
-        <md-button ng-click="answer(null)"> Cancel </md-button>
-        <md-button ng-click="answer(item)" class="md-primary"> Save </md-button>
+        <md-button ng-click="answer(null)" translate="CANCEL"> Cancel </md-button>
+        <md-button ng-click="answer(item)" class="md-primary" translate="SAVE"> Save </md-button>
     </div>
 </md-dialog>
